fixed #createChild / #replaceNode

--- a/test/index.html
+++ b/test/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html>    <head>        <meta charset="utf-8"/>        <title>mocha test.</title>        <link rel="stylesheet" href="../build/build.css"/>    </head>    <body>    <div id="mocha"></div>    <script src="../build/build.js"></script>    <script>        require("mocha");        mocha.setup("bdd");    </script>    <script src="index.js"></script>    <script>        mocha.run();    </script>    </body></html>
+<!doctype html>
+<html>
+				<head>
+								<meta charset="utf-8"/>
+								<title>mocha test.</title>
+								<link rel="stylesheet" href="../build/build.css"/>
+</head>
+<body>
+				<div id="mocha"></div>
+				<script src="../build/build.js"></script>
+				<script>
+								require("mocha");
+								mocha.setup("bdd");
+								</script>
+								<script src="index.js"></script>
+								<script>
+												mocha.run();
+</script>    </body>
+</html>
